# lockstep

./: .gitignore  .prettierignore  .prettierrc.json  BEHAVIORS.md  CLAUDE.md  CONSTRAINT_MIGRATION.md  LICENSE  NATIVE_RUST_MIGRATION.md  README.md  REBASE-PLAN.md  TEST_AUDIT.md  TIMELINE_AUDIT.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  pending-issues.md  playwright.config.ts  playwright.integration.config.ts  playwright.screenshots.config.ts  plugins.md  sandbox.html  tsconfig.build.tsbuildinfo  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  (+1 more)
.playwright-mcp/: page-2026-05-10T01-15-31-287Z.yml  page-2026-05-10T05-47-58-393Z.yml  page-2026-05-11T01-48-57-233Z.yml  page-2026-05-11T02-21-03-563Z.yml  page-2026-05-11T02-35-03-202Z.yml
bench/: .gitignore  analyze-trace.py  bench.html  snap-rules-DRAFT.md
docs/: ICONS.md  ICON_DESIGN.md  INTERACTION_DESIGN.md  SELECTION_DESIGN.md  SNAPPY_PLAYER_NOTES.md  THUMBNAIL_CACHE_DESIGN.md  TIMELINE_BEHAVIOR.md  VISUAL_DESIGN.md  VISUAL_SPEC.md  canvas-timeline-gaps.md  canvas-timeline.html  guide.html  icons-new.html  icons.html  screenshot-workflow.yml  tick-timeline-svg.html  tick-timeline.html
features/: drop-marker-file.feature  region-creation.feature  region-editing.feature  video-loading.feature
sandbox/: catalog.ts  index.html
scripts/: analyze-trace.py  behavior-coverage.mjs  behavior.js  behavior.ts  bench-constraints.ts  bench-realistic.ts  layouts.ts  screenshot-local.ts  screenshot.ts  setup-binaries.mjs  shoot.mjs  tsconfig.json
spec/: defs.yaml
src/: App.css  App.tsx  hotkeys.ts  index.css  main.tsx  menus.ts  sandbox.ts  types.ts  uiScale.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  diagnostic.rs  ffmpeg.rs  frame_stream.rs  lib.rs  main.rs  pchip.rs  processor.rs  rife.rs  scene.rs  storage.rs  thumbnails.rs  video.rs
src-tauri/src/pipeline/: mod.rs  options.rs  post.rs  rife_pass.rs  segments.rs  time_map.rs
src-tauri/tests/: export_save.rs  warp_e2e.rs
src/api/: warp.ts  (+9 more)
(+478 files in other folders)
