[package]
name = "vj-toolkit"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
identifier = "com.vjtools.toolkit"
icon = ["icons/icon.ico"]

[lib]
name = "vj_toolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
tempfile = "3"
